--- a/switch.html
+++ b/switch.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title>Switch</title>
+    <title>Three State Switch</title>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
         <script>
                 function filterme(val) 
